2010-01-28  Ben Murdoch  <benm@google.com>

        Reviewed by Simon Hausmann.

        [Android] [Qt] Touch event page co-ordinates are incorrect when touch is received in an iframe.
        https://bugs.webkit.org/show_bug.cgi?id=34162

        Update the existing iframe touch event test to also examine the page co-ordinates of the touch that is received.

        * fast/events/touch/resources/touch-inside-iframe2.html:
        * fast/events/touch/touch-inside-iframe-expected.txt:
        * fast/events/touch/touch-inside-iframe.html:

2010-01-28  Xan Lopez  <xlopez@igalia.com>

        [GTK] Can DnD files to our filechooser widget (<input type="file">)
        https://bugs.webkit.org/show_bug.cgi?id=34246

        Skip failing test because of this missing feature.

        * platform/gtk/Skipped:

2010-01-28  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Fisher.

        Remove tests for dates later than 275760-09-13T00:00Z.
        https://bugs.webkit.org/show_bug.cgi?id=34240

        Date.UTC() of V8 doesn't support such dates though Date.UTC() of
        JavaScriptCore does.

        * fast/forms/input-valueasnumber-date-expected.txt:
        * fast/forms/input-valueasnumber-datetime-expected.txt:
        * fast/forms/input-valueasnumber-datetimelocal-expected.txt:
        * fast/forms/input-valueasnumber-month-expected.txt:
        * fast/forms/script-tests/input-valueasnumber-date.js:
        * fast/forms/script-tests/input-valueasnumber-datetime.js:
        * fast/forms/script-tests/input-valueasnumber-datetimelocal.js:
        * fast/forms/script-tests/input-valueasnumber-month.js:
        * platform/win/fast/forms/input-valueasnumber-datetime-expected.txt: Removed.

2010-01-27  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        rangeOverflow/rangeUnderflow support for type=date
        https://bugs.webkit.org/show_bug.cgi?id=34209

        * fast/forms/ValidityState-rangeOverflow-date-expected.txt: Added.